[package]
name = "torophy"
version = "0.1.0"
authors = ["lemunozm <lemunozm@gmail.com>"]
edition = "2018"

[dependencies]

[dev-dependencies]
piston = "0.49.0"
pistoncore-glutin_window = "0.63.0"
piston2d-glium_graphics = "0.76.0"

glium = { version = "0.26", default-features = true }
imgui = "0.3.0"
imgui-winit-support = "0.3.0"
imgui-glium-renderer = "0.3.0"

