[package]
name = "torophy"
version = "0.1.1"
authors = ["lemunozm <lemunozm@gmail.com>"]
edition = "2018"
description = "2D physics engine over a toroidal space"
license = "Apache-2.0"
homepage = "https://github.com/lemunozm/torophy/"
repository = "https://github.com/lemunozm/torophy/"
readme = "README.md"
keywords = ["physics", "physics-engine", "simulator", "simulation", "toroidal"]
categories = ["game-engines", "game-development", "simulation", "science", "mathematics"]

[dependencies]

[dev-dependencies]
glium = { version = "0.26", default-features = true }
imgui = "0.3.0"
imgui-winit-support = "0.3.0"
imgui-glium-renderer = "0.3.0"
rand = "0.7"
